--- a/students/StudentsProgress.csproj
+++ b/students/StudentsProgress.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F2FF0020-24A8-48C0-8BB4-F238B38A4D4E}</ProjectGuid>
+    <ProjectGuid>{4C5DB53B-7595-4BE8-A193-3DBF39E3204F}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>_20160711_HomeWorkMatrix</RootNamespace>
-    <AssemblyName>20160711_HomeWorkMatrix</AssemblyName>
+    <RootNamespace>StudentsProgress</RootNamespace>
+    <AssemblyName>StudentsProgress</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -41,14 +41,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ArraySortOrder.cs" />
-    <Compile Include="HanoiTowers.cs" />
+    <Compile Include="Data\Common.cs" />
+    <Compile Include="GUI\ConsoleGraphic.cs" />
+    <Compile Include="Logic\CommonHelperMethods.cs" />
+    <Compile Include="Logic\ConsoleMenu.cs" />
+    <Compile Include="Logic\StudentsHelperMethods.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
