--- a/SingleLinkedListDemo/SingleLinkedListDemo/SingleLinkedListDemo.csproj
+++ b/SingleLinkedListDemo/SingleLinkedListDemo/SingleLinkedListDemo.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="SimpleLinkedList.cs" />
     <Compile Include="LinkedListIterator.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
