--- a/new/CollectionsTutorial/CollectionsTutorial/CollectionsTutorial.csproj
+++ b/new/CollectionsTutorial/CollectionsTutorial/CollectionsTutorial.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Demo\DoublyLinkedListDemo.cs" />
     <Compile Include="Demo\SingleLinkedListDemo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
